Fix contrast of the selected item in monaco intellisense dropdown (it's a link and was getting overridden in HC mode by the generic link styling)

--- a/theme/monaco.less
+++ b/theme/monaco.less
@@ -69,6 +69,9 @@
 .monaco-list-row.focused {
     background-color: var(--pxt-colors-blue-background) !important;
     color: var(--pxt-colors-blue-foreground) !important;
+    a {
+        color: var(--pxt-colors-blue-foreground) !important;
+    }
 }
 .monaco-editor.vs .suggest-widget:not(.frozen) .monaco-list .monaco-list-row .monaco-highlighted-label .highlight {
     color: var(--pxt-colors-blue-background) !important;
